--- a/coderelease.props
+++ b/coderelease.props
@@ -1,5 +1,6 @@
 source ./_repo_vars.sh
 
 export svnMode=RJMDOCKERSIMPLE
+export RJMDOCKERSIMPLE_EXTRA_BUILD_ARGS="invalid"
 export DOCKER_USERNAME=metcarob
 export DOCKER_IMAGENAME=${PROJECT_NAME}-app
