--- a/build_image/Dockerfile
+++ b/build_image/Dockerfile
@@ -4,6 +4,6 @@ FROM ${PYTHON_IMAGE}
 
 MAINTAINER Robert Metcalf
 
-COPY ./requirements.txt requirements.txt
+COPY ./not_in_git_combined_requirements.txt not_in_git_combined_requirements.txt
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r not_in_git_combined_requirements.txt
